Bug 1572415: Convert clip paths when potentially changing canvas backend in CanvasRenderingContext2D. r=jrmuizel

The clip Paths in mStyleStack might not be compatible with the new mTarget, so
this converts them to make sure they are.

Differential Revision: https://phabricator.services.mozilla.com/D51668