dom/canvas/CanvasRenderingContext2D.h
@@ -1041,6 +1041,7 @@ class CanvasRenderingContext2D final : public nsICanvasRenderingContextInternal,
   bool IsWriteOnly() const { return mWriteOnly; }
 
   bool mWriteOnly;
+  bool mClipsNeedConverting = false;
 };
 
 size_t BindingJSObjectMallocBytes(CanvasRenderingContext2D* aContext);
